[gd_scene load_steps=29 format=3 uid="uid://iv4viikpx7gw"]

[ext_resource type="Script" path="res://src/scene/gameloop/Gameloop.gd" id="1_kjm50"]
[ext_resource type="PackedScene" uid="uid://dv7miuwh1cmvx" path="res://src/util/spawner/Spawner.tscn" id="2_r0qee"]
[ext_resource type="PackedScene" path="res://src/util/background/Background.tscn" id="3_l52ca"]
[ext_resource type="Texture2D" uid="uid://cjoi6xj2qj6f8" path="res://assets/ui/progress_bars/Hp_frame.png" id="4_5gmx2"]
[ext_resource type="Texture2D" uid="uid://qx0phhmrt5o7" path="res://assets/ui/progress_bars/Hp_orange.png" id="5_o85ps"]
[ext_resource type="Texture2D" uid="uid://b0vkyuhsl3b0h" path="res://assets/ui/player/HP_mana_bar.png" id="6_yy6cm"]
[ext_resource type="Texture2D" uid="uid://7n0lve6hd88u" path="res://assets/ui/player/HP_Portrait_frame_bg.png" id="7_yy3mq"]
[ext_resource type="Texture2D" uid="uid://dvbyoi2r6fh6f" path="res://assets/ui/player/HP_Portrait_frame.png" id="8_i8cvt"]
[ext_resource type="Texture2D" uid="uid://db6w2m1whxjny" path="res://assets/ui/progress_bars/Hp_red.png" id="9_i1tju"]
[ext_resource type="Texture2D" uid="uid://dxc78tnndb6p" path="res://assets/ui/progress_bars/Hp_blue.png" id="10_il6f7"]
[ext_resource type="Texture2D" uid="uid://bnaf30mvo74hu" path="res://assets/ui/bars/bars_center/Dead_bar.png" id="11_qq8s0"]
[ext_resource type="FontFile" uid="uid://bi1dwkkedk1oh" path="res://assets/fonts/PixelSplitter-Bold.ttf" id="12_lxkee"]
[ext_resource type="Texture2D" uid="uid://dbp1kvouk3r04" path="res://assets/icons_game/rpg/11_cross.png" id="13_c43ws"]
[ext_resource type="Texture2D" uid="uid://c55g2vn0lfkj0" path="res://assets/ui/buttons/buttons_rect/1_gray_button.png" id="14_fplch"]
[ext_resource type="Texture2D" uid="uid://8g3ncgbkh1m5" path="res://assets/ui/buttons/buttons_rect/1_gray_button_pick.png" id="15_pcgb4"]
[ext_resource type="Texture2D" uid="uid://dxb4l22qqjlbl" path="res://assets/icons_game/rpg/27_Skull.png" id="16_a417h"]
[ext_resource type="Texture2D" uid="uid://diaaemenansya" path="res://assets/ui/buttons/buttons_rect/1_orange_button.png" id="17_267f7"]
[ext_resource type="Texture2D" uid="uid://ci6mg8ovjriql" path="res://assets/ui/buttons/buttons_rect/1_orange_button_pick.png" id="18_ppe1e"]
[ext_resource type="Texture2D" uid="uid://dd6tkuuds1yti" path="res://assets/ui/ingame/Skill_bar_noColbs_little_cut.png" id="19_5l4ry"]
[ext_resource type="Texture2D" uid="uid://i6x06ahk6jpk" path="res://assets/icons_game/rpg/70_magic.png" id="20_4usoh"]
[ext_resource type="Texture2D" uid="uid://wjm36pk422jn" path="res://assets/icons_game/rpg/71_magic.png" id="21_21ehy"]
[ext_resource type="Texture2D" uid="uid://b57uk6ntytpje" path="res://assets/icons_game/rpg/72_magic.png" id="22_qhfrw"]
[ext_resource type="Texture2D" uid="uid://b18wdt2qrtdxc" path="res://assets/ui/bars/bars_wide/Popup_window.png" id="23_ybdjl"]
[ext_resource type="FontFile" uid="uid://cho30nbiui1uw" path="res://assets/fonts/pixel_font_7.ttf" id="24_blfbt"]
[ext_resource type="Texture2D" uid="uid://d13gogwkfse6l" path="res://assets/ui/bars/bars_small/Dialogue_frame.png" id="25_ad83c"]
[ext_resource type="Texture2D" uid="uid://de2tpgcubddv7" path="res://assets/ui/buttons/buttons_square/11_right_arrow.png" id="26_2rkud"]
[ext_resource type="Texture2D" uid="uid://bxbxdypqdr2jn" path="res://assets/ui/buttons/buttons_square/11_right_arrow_pick.png" id="27_dqj67"]

[sub_resource type="Environment" id="26"]
background_mode = 4
glow_enabled = true
glow_blend_mode = 1

[node name="Gameloop" type="Node2D"]
script = ExtResource("1_kjm50")

[node name="Spawner" parent="." instance=ExtResource("2_r0qee")]

[node name="SpaceshipStartPosition" type="Marker2D" parent="."]
position = Vector2(576, 1280)

[node name="Background" parent="." instance=ExtResource("3_l52ca")]

[node name="DPSTimer" type="Timer" parent="."]

[node name="UpdateSpawnrateTimer" type="Timer" parent="."]

[node name="PlayedTimer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 2048.0

[node name="ProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = 197.0
offset_right = 231.0
offset_bottom = 212.0
grow_vertical = 2
rotation = 268.606
scale = Vector2(2, 4)
value = 50.0
texture_under = ExtResource("4_5gmx2")
texture_progress = ExtResource("5_o85ps")
texture_progress_offset = Vector2(3, 3)

[node name="Player" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 320.0

[node name="PlayerBar" type="Control" parent="Control/Player"]
anchors_preset = 0
offset_right = 454.0
offset_bottom = 102.0
scale = Vector2(2.5, 2.5)

[node name="Bar" type="TextureRect" parent="Control/Player/PlayerBar"]
layout_mode = 0
offset_left = 60.8
offset_right = 409.8
offset_bottom = 90.0
texture = ExtResource("6_yy6cm")
stretch_mode = 5

[node name="RingBackground" type="TextureRect" parent="Control/Player/PlayerBar"]
layout_mode = 0
offset_right = 90.0
offset_bottom = 90.0
texture = ExtResource("7_yy3mq")
stretch_mode = 5

[node name="Ring" type="TextureRect" parent="Control/Player/PlayerBar"]
layout_mode = 0
offset_right = 90.0
offset_bottom = 90.0
texture = ExtResource("8_i8cvt")
stretch_mode = 5

[node name="HpBar" type="TextureProgressBar" parent="Control/Player"]
layout_mode = 0
offset_left = 240.0
offset_top = 88.0
offset_right = 437.0
offset_bottom = 103.0
scale = Vector2(3.4, 3.4)
value = 100.0
texture_under = ExtResource("4_5gmx2")
texture_progress = ExtResource("9_i1tju")
texture_progress_offset = Vector2(3, 3)

[node name="HpBarText" type="Label" parent="Control/Player"]
layout_mode = 0
offset_left = 240.0
offset_top = 96.0
offset_right = 910.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 25
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpBar" type="TextureProgressBar" parent="Control/Player"]
layout_mode = 0
offset_left = 249.0
offset_top = 158.0
offset_right = 446.0
offset_bottom = 173.0
scale = Vector2(2.9, 3)
value = 50.0
texture_under = ExtResource("4_5gmx2")
texture_progress = ExtResource("10_il6f7")
texture_progress_offset = Vector2(3, 3)

[node name="LevelText" type="Label" parent="Control/Player"]
layout_mode = 0
offset_left = 236.0
offset_top = 19.0
offset_right = 308.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Playername" type="Label" parent="Control/Player"]
layout_mode = 0
offset_left = 352.0
offset_top = 19.0
offset_right = 880.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 30
text = "Playername"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCleared" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Control/LevelCleared"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_qq8s0")
stretch_mode = 5

[node name="Heading" type="Label" parent="Control/LevelCleared"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("12_lxkee")
theme_override_font_sizes/font_size = 80
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Control/LevelCleared"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -128.0
offset_right = 63.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_c43ws")
stretch_mode = 6

[node name="LevelClearedMenuButton" type="TextureButton" parent="Control/LevelCleared"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.5
offset_top = 64.0
offset_right = -0.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("14_fplch")
texture_pressed = ExtResource("15_pcgb4")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/LevelCleared/LevelClearedMenuButton"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelFailed" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Control/LevelFailed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_qq8s0")
stretch_mode = 5

[node name="Heading" type="Label" parent="Control/LevelFailed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_lxkee")
theme_override_font_sizes/font_size = 80
text = "Defeat!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Control/LevelFailed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_a417h")
stretch_mode = 5

[node name="LevelClearedFailedButton" type="TextureButton" parent="Control/LevelFailed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("14_fplch")
texture_pressed = ExtResource("15_pcgb4")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/LevelFailed/LevelClearedFailedButton"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Control/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 107.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("11_qq8s0")
stretch_mode = 5

[node name="Heading" type="Label" parent="Control/Pause"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 66.0
offset_top = 64.0
offset_right = -63.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("12_lxkee")
theme_override_font_sizes/font_size = 80
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseResumeButton" type="TextureButton" parent="Control/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -96.0
offset_right = 0.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("17_267f7")
texture_pressed = ExtResource("18_ppe1e")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/Pause/PauseResumeButton"]
layout_mode = 0
offset_right = 255.0
offset_bottom = 60.0
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenuButton" type="TextureButton" parent="Control/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.5
offset_top = 64.0
offset_right = 0.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("17_267f7")
texture_pressed = ExtResource("18_ppe1e")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/Pause/PauseMenuButton"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Abilities" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -704.0
offset_top = -448.0
offset_right = -351.0
offset_bottom = -320.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
texture = ExtResource("19_5l4ry")
stretch_mode = 5

[node name="Ability_1" type="TextureButton" parent="Control/Abilities"]
layout_mode = 0
offset_left = 72.0
offset_top = 32.0
offset_right = 136.0
offset_bottom = 96.0
texture_normal = ExtResource("20_4usoh")
stretch_mode = 5

[node name="Ability_2" type="TextureButton" parent="Control/Abilities"]
layout_mode = 0
offset_left = 172.0
offset_top = 32.0
offset_right = 236.0
offset_bottom = 96.0
texture_normal = ExtResource("21_21ehy")
stretch_mode = 5

[node name="Ability_3" type="TextureButton" parent="Control/Abilities"]
layout_mode = 0
offset_left = 272.0
offset_top = 32.0
offset_right = 336.0
offset_bottom = 96.0
texture_normal = ExtResource("22_qhfrw")
stretch_mode = 5

[node name="DPSMeter" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -448.0
offset_right = 320.0
offset_bottom = -193.0
grow_vertical = 0

[node name="Background" type="TextureRect" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -175.0
offset_right = 106.0
offset_bottom = -111.0
grow_vertical = 0
scale = Vector2(1.5, 1.5)
texture = ExtResource("23_ybdjl")
stretch_mode = 5
flip_h = true

[node name="DPSLabel" type="Label" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -21.5
offset_right = 88.0
offset_bottom = 26.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_blfbt")
theme_override_font_sizes/font_size = 40
text = "DPS:"
vertical_alignment = 1

[node name="DPS" type="Label" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -21.5
offset_right = 257.0
offset_bottom = 26.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_blfbt")
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1

[node name="DPSAvgLabel" type="Label" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 48.5
offset_right = 80.0
offset_bottom = 88.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_blfbt")
theme_override_font_sizes/font_size = 30
text = "Avg:"
vertical_alignment = 1

[node name="DPSAvg" type="Label" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 48.5
offset_right = 256.0
offset_bottom = 88.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_blfbt")
theme_override_font_sizes/font_size = 30
text = "0"
vertical_alignment = 1

[node name="DPSMaxLabel" type="Label" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -87.5
offset_right = 80.0
offset_bottom = -47.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_blfbt")
theme_override_font_sizes/font_size = 30
text = "Max:"
vertical_alignment = 1

[node name="DpsMax" type="Label" parent="Control/DPSMeter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -87.5
offset_right = 256.0
offset_bottom = -47.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_blfbt")
theme_override_font_sizes/font_size = 30
text = "0"
vertical_alignment = 1

[node name="Footer" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -192.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
texture = ExtResource("25_ad83c")

[node name="BannerAd" type="ColorRect" parent="Control/Footer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -28.0
offset_right = 448.0
offset_bottom = 28.0
grow_vertical = 2
color = Color(0.34902, 0.34902, 0.34902, 1)

[node name="BannerAdText" type="Label" parent="Control/Footer/BannerAd"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 56.0
text = "Hier könnte Ihre Werbung stehen!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="Control/Footer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("26_2rkud")
texture_pressed = ExtResource("27_dqj67")
stretch_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("26")

[connection signal="asteroid_spawned" from="Spawner" to="." method="_on_spawner_asteroid_spawned"]
[connection signal="timeout" from="DPSTimer" to="." method="_on_DPSTimer_timeout"]
[connection signal="timeout" from="UpdateSpawnrateTimer" to="." method="_on_UpdateSpawnrateTimer_timeout"]
[connection signal="timeout" from="PlayedTimer" to="." method="_on_PlayedTimer_timeout"]
[connection signal="pressed" from="Control/LevelCleared/LevelClearedMenuButton" to="." method="_on_level_cleared_menu_button_pressed"]
[connection signal="pressed" from="Control/LevelFailed/LevelClearedFailedButton" to="." method="_on_level_cleared_failed_button_pressed"]
[connection signal="pressed" from="Control/Pause/PauseResumeButton" to="." method="_on_pause_resume_button_pressed"]
[connection signal="pressed" from="Control/Pause/PauseMenuButton" to="." method="_on_pause_menu_button_pressed"]
[connection signal="pressed" from="Control/Abilities/Ability_1" to="." method="_on_Ability_1_pressed"]
[connection signal="pressed" from="Control/Abilities/Ability_2" to="." method="_on_Ability_1_pressed"]
[connection signal="pressed" from="Control/Abilities/Ability_3" to="." method="_on_Ability_1_pressed"]
[connection signal="pressed" from="Control/Footer/PauseButton" to="." method="_on_pause_button_pressed"]
